--- a/temp-proj/package.json
+++ b/temp-proj/package.json
@@ -17,31 +17,29 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@gsap/react": "^2.1.1",
-    "@react-three/drei": "^9.114.0",
+    "@react-three/drei": "^9.115.0",
     "@react-three/eslint-plugin": "^0.1.1",
-    "@react-three/fiber": "^8.17.8",
-    "@react-three/postprocessing": "^2.16.2",
-    "autoprefixer": "^10.4.20",
-    "chart.js": "^4.4.4",
-    "framer-motion": "^11.9.0",
+    "@react-three/fiber": "^8.17.10",
+    "framer-motion": "^11.11.10",
     "gsap": "^3.12.5",
     "leva": "^0.9.35",
+    "maath": "^0.10.8",
     "postcss": "^8.4.47",
-    "postprocessing": "^6.36.3",
     "react": "^18.3.1",
-    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
-    "react-globe.gl": "^2.27.2",
+    "react-globe.gl": "^2.27.4",
     "react-responsive": "^10.0.0",
-    "tailwindcss": "^3.4.13",
+    "tailwindcss": "^3.4.14",
     "three": "^0.169.0",
     "typed.js": "^2.1.0"
   },
   "devDependencies": {
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "globals": "^15.9.0",
-    "vite": "^5.4.1"
+    "@eslint/js": "^9.13.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@vitejs/plugin-react": "^4.3.3",
+    "autoprefixer": "^10.4.22",
+    "globals": "^15.11.0",
+    "vite": "^5.4.10"
   }
 }
